infra/security/vault-system/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
