infra/security/vault-system/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault-system
spec:
  parentRefs:
    - name: gateway-traefik-internal
      namespace: traefik-internal
      sectionName: https-wildcard
  hostnames:
    - "vault.sudoceo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8080
